@@ -1,3 +1,7 @@
+* 2014-06-22 - thorben.betten@open-xchange.com
+
+ - Fix for bug 33208: Load modules information only if login's result code does signal a success (and not a redirect or a failure)
+
 * 2014-06-20 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 32323: Introduced "acknowledge" parameter for EDIT actions to prevent implicit client-side acknowledgments of unknown files  
